Resolved the issues of logging for all functions in wrapper overhead.

--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -68,6 +68,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "start_time = '2024-03-21 11:50:28,293070'\n",
+    "\n",
+    "datetime.datetime.strptime(start_time, \"%Y-%m-%d %H:%M:%S,%f%z\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +96,7 @@
      "output_type": "stream",
      "text": [
       "Running boto3_direct workload: workflow-wo-dna_vis-ed-direct\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': 'b7073276-7623-418d-a31a-fd0c9ff7c4d3', 'start_time': '2024-03-21T09:24:57.192325'}}\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb'}\n",
       "Times: 1\n",
       "Done\n",
       "\n"
@@ -105,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +125,7 @@
      "output_type": "stream",
      "text": [
       "Running boto3_sns workload: workflow-wo-dna_vis-ed-direct_sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'workflow-wo-dna_vis-ed-direct_sns', 'experiment_type': 'boto3_sns', 'request_id': 'dd6ee0ca-78f4-4dcc-a587-ad4d9066ae57', 'start_time': '2024-03-21T10:12:38.163520'}}\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'workflow-wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': 'f0870ea5-d94a-424c-894f-d8d618d991da', 'start_time': '2024-03-21 11:50:28,293070'}}\n",
       "Times: 1\n",
       "Done\n",
       "\n"
@@ -134,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +154,7 @@
      "output_type": "stream",
      "text": [
       "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': '5676ebe2-84c2-495c-a775-dc712937cdbb', 'start_time': '2024-03-21T09:21:31.113142'}}\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'workflow-wo-dna_vis-ed-direct_sns', 'experiment_type': 'boto3_sns', 'request_id': '54bb6a0e-1859-4e9e-89e5-5b19f4de4450', 'start_time': '2024-03-21 11:51:07,815391'}}\n",
       "Times: 1\n"
      ]
     }
