--- a/benchmarks/experiments/wrapper_overhead/setup.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/setup.ipynb
@@ -63,16 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found credentials in environment variables.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -109,7 +102,7 @@
       "#4 DONE 0.0s\n",
       "\n",
       "#5 [internal] load build context\n",
-      "#5 transferring context: 107.74kB done\n",
+      "#5 transferring context: 108.76kB done\n",
       "#5 DONE 0.0s\n",
       "\n",
       "#6 [2/6] COPY requirements.txt ./\n",
@@ -129,7 +122,7 @@
       "\n",
       "#11 exporting to image\n",
       "#11 exporting layers 0.0s done\n",
-      "#11 writing image sha256:3b466fd86b4d99ad666d2848c4deb08b68942591e923f2300bc1552054e9c255 done\n",
+      "#11 writing image sha256:fc27a18479f29a61e936116a5238425cedad20cc475fa97239bd4f61fa8e4e5b done\n",
       "#11 naming to docker.io/library/wo-dna_vis-ed-direct-visualize:latest done\n",
       "#11 DONE 0.0s\n",
       "Docker image wo-dna_vis-ed-direct-visualize:latest built successfully.\n",
@@ -146,9 +139,9 @@
      "text": [
       "Login Succeeded\n",
       "The push refers to repository [485595969306.dkr.ecr.us-east-2.amazonaws.com/wo-dna_vis-ed-direct-visualize]\n",
-      "2fb7f03b7146: Preparing\n",
-      "ce4f428e205b: Preparing\n",
-      "9926562a87e9: Preparing\n",
+      "ff099a48b25c: Preparing\n",
+      "1b64c10ef09e: Preparing\n",
+      "a85c2f3154ef: Preparing\n",
       "8e1b406f394f: Preparing\n",
       "3a89be36bfcd: Preparing\n",
       "0a20c8da2344: Preparing\n",
@@ -157,11 +150,11 @@
       "052242efe275: Preparing\n",
       "274a79fec6a9: Preparing\n",
       "6849347e354b: Preparing\n",
-      "0a20c8da2344: Waiting\n",
       "05788b7af5ed: Waiting\n",
       "706e59713fa4: Waiting\n",
-      "274a79fec6a9: Waiting\n",
       "052242efe275: Waiting\n",
+      "274a79fec6a9: Waiting\n",
+      "0a20c8da2344: Waiting\n",
       "6849347e354b: Waiting\n",
       "8e1b406f394f: Layer already exists\n",
       "3a89be36bfcd: Layer already exists\n",
@@ -169,11 +162,11 @@
       "05788b7af5ed: Layer already exists\n",
       "052242efe275: Layer already exists\n",
       "706e59713fa4: Layer already exists\n",
-      "6849347e354b: Layer already exists\n",
       "274a79fec6a9: Layer already exists\n",
-      "9926562a87e9: Pushed\n",
-      "ce4f428e205b: Pushed\n",
-      "2fb7f03b7146: Pushed\n"
+      "6849347e354b: Layer already exists\n",
+      "a85c2f3154ef: Pushed\n",
+      "1b64c10ef09e: Pushed\n",
+      "ff099a48b25c: Pushed\n"
      ]
     },
     {
@@ -187,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latest: digest: sha256:16b19fa18065060a2167e67ef4bc5ab5a7f9e8c902d1ef5c5d1ed96d7b0e5197 size: 2623\n",
+      "latest: digest: sha256:4c58e2814fd8d2211dc1dadf052ca2201821ceb7aa665a888ab65e2b8f8136b2 size: 2624\n",
       "Resulting Function ARN: arn:aws:lambda:us-east-2:485595969306:function:wo-dna_vis-ed-direct-visualize\n",
       "\n",
       "Deploying wo-dna_vis-ed-direct-get_input\n",
@@ -220,7 +213,7 @@
       "#4 DONE 0.0s\n",
       "\n",
       "#5 [internal] load build context\n",
-      "#5 transferring context: 106.46kB done\n",
+      "#5 transferring context: 106.67kB done\n",
       "#5 DONE 0.0s\n",
       "\n",
       "#6 [2/6] COPY requirements.txt ./\n",
@@ -239,11 +232,10 @@
       "#10 DONE 0.0s\n",
       "\n",
       "#11 exporting to image\n",
-      "#11 exporting layers\n",
       "#11 exporting layers 0.0s done\n",
-      "#11 writing image sha256:81cd695b11f32e0e100c6fca2066c4c465944a0bd498830beefac077f8938516 done\n",
+      "#11 writing image sha256:1118d7a328602f35a6ba1a00416a629acbdcc116b625e6cfe99e12c9689c4209 done\n",
       "#11 naming to docker.io/library/wo-dna_vis-ed-direct-get_input:latest done\n",
-      "#11 DONE 0.1s\n",
+      "#11 DONE 0.0s\n",
       "Docker image wo-dna_vis-ed-direct-get_input:latest built successfully.\n",
       "WARNING! Using --password via the CLI is insecure. Use --password-stdin.\n",
       "WARNING! Your password will be stored unencrypted in /home/daniel/.docker/config.json.\n",
@@ -258,9 +250,9 @@
      "text": [
       "Login Succeeded\n",
       "The push refers to repository [485595969306.dkr.ecr.us-east-2.amazonaws.com/wo-dna_vis-ed-direct-get_input]\n",
-      "83beae8cbf32: Preparing\n",
-      "51cec7ec392c: Preparing\n",
-      "9d85df8b5e8e: Preparing\n",
+      "a332f03f55c4: Preparing\n",
+      "ff793b0c6b78: Preparing\n",
+      "11c1e1de5b7d: Preparing\n",
       "6fe8485efa46: Preparing\n",
       "34352bc5dfd0: Preparing\n",
       "0a20c8da2344: Preparing\n",
@@ -269,23 +261,23 @@
       "052242efe275: Preparing\n",
       "274a79fec6a9: Preparing\n",
       "6849347e354b: Preparing\n",
-      "0a20c8da2344: Waiting\n",
-      "05788b7af5ed: Waiting\n",
       "706e59713fa4: Waiting\n",
+      "6849347e354b: Waiting\n",
       "052242efe275: Waiting\n",
       "274a79fec6a9: Waiting\n",
-      "6849347e354b: Waiting\n",
+      "0a20c8da2344: Waiting\n",
+      "05788b7af5ed: Waiting\n",
       "34352bc5dfd0: Layer already exists\n",
       "6fe8485efa46: Layer already exists\n",
-      "05788b7af5ed: Layer already exists\n",
       "0a20c8da2344: Layer already exists\n",
-      "052242efe275: Layer already exists\n",
+      "05788b7af5ed: Layer already exists\n",
       "706e59713fa4: Layer already exists\n",
+      "052242efe275: Layer already exists\n",
       "274a79fec6a9: Layer already exists\n",
       "6849347e354b: Layer already exists\n",
-      "9d85df8b5e8e: Pushed\n",
-      "83beae8cbf32: Pushed\n",
-      "51cec7ec392c: Pushed\n"
+      "11c1e1de5b7d: Pushed\n",
+      "ff793b0c6b78: Pushed\n",
+      "a332f03f55c4: Pushed\n"
      ]
     },
     {
@@ -299,7 +291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latest: digest: sha256:f7c83ecf4d64cfe41a503d4d32a9ced72ad2fa2bb271c79b792cda29a6e78d46 size: 2623\n",
+      "latest: digest: sha256:f99057dffa33a529ca8bea8a2700588d06e1bfe6b9330f03395d2e5a25f8131d size: 2623\n",
       "Resulting Function ARN: arn:aws:lambda:us-east-2:485595969306:function:wo-dna_vis-ed-direct-get_input\n",
       "Completed deployment of workflow-wo-dna_vis-ed-direct\n",
       "\n",
@@ -312,7 +304,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +362,7 @@
       "#4 DONE 0.0s\n",
       "\n",
       "#5 [internal] load build context\n",
-      "#5 transferring context: 107.85kB done\n",
+      "#5 transferring context: 108.84kB done\n",
       "#5 DONE 0.0s\n",
       "\n",
       "#6 [2/6] COPY requirements.txt ./\n",
@@ -390,7 +382,7 @@
       "\n",
       "#11 exporting to image\n",
       "#11 exporting layers 0.0s done\n",
-      "#11 writing image sha256:c1092c912c02c2429909b7a8ee44d38bcf6158ccfaf0bc05cb5e4d78f859757a done\n",
+      "#11 writing image sha256:9efb8bef44800ec686158f8c041b0313792f0fde8e230f630aa739071bd3e107 done\n",
       "#11 naming to docker.io/library/wo-dna_vis-ed-direct_sns-visualize:latest done\n",
       "#11 DONE 0.0s\n",
       "Docker image wo-dna_vis-ed-direct_sns-visualize:latest built successfully.\n",
@@ -407,9 +399,9 @@
      "text": [
       "Login Succeeded\n",
       "The push refers to repository [485595969306.dkr.ecr.us-east-2.amazonaws.com/wo-dna_vis-ed-direct_sns-visualize]\n",
-      "11492b72a867: Preparing\n",
-      "a08c3402a9ce: Preparing\n",
-      "61535869bf74: Preparing\n",
+      "55a8a8f9310d: Preparing\n",
+      "b44f79ea1cdc: Preparing\n",
+      "e3c6852c69dd: Preparing\n",
       "8e1b406f394f: Preparing\n",
       "3a89be36bfcd: Preparing\n",
       "0a20c8da2344: Preparing\n",
@@ -418,23 +410,23 @@
       "052242efe275: Preparing\n",
       "274a79fec6a9: Preparing\n",
       "6849347e354b: Preparing\n",
+      "05788b7af5ed: Waiting\n",
       "706e59713fa4: Waiting\n",
       "052242efe275: Waiting\n",
       "274a79fec6a9: Waiting\n",
       "6849347e354b: Waiting\n",
       "0a20c8da2344: Waiting\n",
-      "05788b7af5ed: Waiting\n",
-      "3a89be36bfcd: Layer already exists\n",
       "8e1b406f394f: Layer already exists\n",
+      "3a89be36bfcd: Layer already exists\n",
       "05788b7af5ed: Layer already exists\n",
       "0a20c8da2344: Layer already exists\n",
       "052242efe275: Layer already exists\n",
       "706e59713fa4: Layer already exists\n",
       "6849347e354b: Layer already exists\n",
       "274a79fec6a9: Layer already exists\n",
-      "61535869bf74: Pushed\n",
-      "a08c3402a9ce: Pushed\n",
-      "11492b72a867: Pushed\n"
+      "b44f79ea1cdc: Pushed\n",
+      "e3c6852c69dd: Pushed\n",
+      "55a8a8f9310d: Pushed\n"
      ]
     },
     {
@@ -448,11 +440,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latest: digest: sha256:e6244270a4a44041322953f8cab8653cbd3b22f096575e67edab8fb2bd6d2bd2 size: 2623\n",
+      "latest: digest: sha256:8d71d31ad66c28d903da230b6c84bc2ec063b76d1895e96e86712a24817dc694 size: 2624\n",
       "Resulting Function ARN: arn:aws:lambda:us-east-2:485595969306:function:wo-dna_vis-ed-direct_sns-visualize\n",
       "Creating sns topic and subscribing lambda function\n",
       "Resulting Topic ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-visualize-sns_topic\n",
-      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-visualize-sns_topic:fac4dec4-dbe4-47b3-acf1-d28c159aba97\n",
+      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-visualize-sns_topic:b1d6bd5e-1149-4c3d-a89d-6c7e5598c9d0\n",
       "\n",
       "Deploying wo-dna_vis-ed-direct_sns-get_input\n",
       "Removing old resources\n",
@@ -476,6 +468,7 @@
       "#2 DONE 0.1s\n",
       "\n",
       "#3 [internal] load .dockerignore\n",
+      "#3 transferring context:\n",
       "#3 transferring context: 2B done\n",
       "#3 DONE 0.0s\n",
       "\n",
@@ -483,7 +476,7 @@
       "#4 DONE 0.0s\n",
       "\n",
       "#5 [internal] load build context\n",
-      "#5 transferring context: 106.95kB done\n",
+      "#5 transferring context: 107.14kB done\n",
       "#5 DONE 0.0s\n",
       "\n",
       "#6 [2/6] COPY requirements.txt ./\n",
@@ -493,17 +486,17 @@
       "#7 CACHED\n",
       "\n",
       "#8 [4/6] COPY app.py ./\n",
-      "#8 CACHED\n",
+      "#8 DONE 0.0s\n",
       "\n",
       "#9 [5/6] COPY src ./src\n",
-      "#9 CACHED\n",
+      "#9 DONE 0.0s\n",
       "\n",
       "#10 [6/6] COPY multi_x_serverless ./multi_x_serverless\n",
-      "#10 CACHED\n",
+      "#10 DONE 0.0s\n",
       "\n",
       "#11 exporting to image\n",
-      "#11 exporting layers done\n",
-      "#11 writing image sha256:a0569ff131a6530f4414223660794e4a76a40932db30ebb215d303996db76d7f done\n",
+      "#11 exporting layers 0.0s done\n",
+      "#11 writing image sha256:39d309232ec739e1f1f397f537ea52c80998db9938d898e0d06980fde1d7dd8e done\n",
       "#11 naming to docker.io/library/wo-dna_vis-ed-direct_sns-get_input:latest done\n",
       "#11 DONE 0.0s\n",
       "Docker image wo-dna_vis-ed-direct_sns-get_input:latest built successfully.\n",
@@ -520,34 +513,34 @@
      "text": [
       "Login Succeeded\n",
       "The push refers to repository [485595969306.dkr.ecr.us-east-2.amazonaws.com/wo-dna_vis-ed-direct_sns-get_input]\n",
-      "5e00b8423586: Preparing\n",
-      "6ee4645909c2: Preparing\n",
-      "78bd355b01ba: Preparing\n",
+      "f51a8ed27576: Preparing\n",
+      "e29f925bb07a: Preparing\n",
+      "f590117785db: Preparing\n",
       "6fe8485efa46: Preparing\n",
       "34352bc5dfd0: Preparing\n",
       "0a20c8da2344: Preparing\n",
       "05788b7af5ed: Preparing\n",
       "706e59713fa4: Preparing\n",
+      "05788b7af5ed: Waiting\n",
+      "0a20c8da2344: Waiting\n",
       "052242efe275: Preparing\n",
       "274a79fec6a9: Preparing\n",
       "6849347e354b: Preparing\n",
       "706e59713fa4: Waiting\n",
-      "0a20c8da2344: Waiting\n",
+      "6849347e354b: Waiting\n",
       "052242efe275: Waiting\n",
       "274a79fec6a9: Waiting\n",
-      "6849347e354b: Waiting\n",
-      "05788b7af5ed: Waiting\n",
-      "5e00b8423586: Layer already exists\n",
-      "6ee4645909c2: Layer already exists\n",
-      "78bd355b01ba: Layer already exists\n",
       "34352bc5dfd0: Layer already exists\n",
       "6fe8485efa46: Layer already exists\n",
-      "0a20c8da2344: Layer already exists\n",
       "05788b7af5ed: Layer already exists\n",
+      "0a20c8da2344: Layer already exists\n",
+      "706e59713fa4: Layer already exists\n",
       "052242efe275: Layer already exists\n",
       "274a79fec6a9: Layer already exists\n",
-      "706e59713fa4: Layer already exists\n",
-      "6849347e354b: Layer already exists\n"
+      "6849347e354b: Layer already exists\n",
+      "e29f925bb07a: Pushed\n",
+      "f590117785db: Pushed\n",
+      "f51a8ed27576: Pushed\n"
      ]
     },
     {
@@ -561,11 +554,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "latest: digest: sha256:314adc2a8f504dce680278a738aadd0f2e925189a945319fbde7dd8b255cfc64 size: 2623\n",
+      "latest: digest: sha256:2a175bff215b5d1a91c8f55e4d15c602321b373b7834a6a68cad24a81a36aa4c size: 2623\n",
       "Resulting Function ARN: arn:aws:lambda:us-east-2:485595969306:function:wo-dna_vis-ed-direct_sns-get_input\n",
       "Creating sns topic and subscribing lambda function\n",
       "Resulting Topic ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-get_input-sns_topic\n",
-      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-get_input-sns_topic:5f6cb459-4ab9-4dab-9ec9-c5ce703298ef\n",
+      "Resulting Subscription ARN: arn:aws:sns:us-east-2:485595969306:wo-dna_vis-ed-direct_sns-get_input-sns_topic:b132e2f6-25ce-4eb4-99e7-f8f9662b9561\n",
       "Completed deployment of workflow-wo-dna_vis-ed-direct_sns\n",
       "\n",
       "\n"
@@ -577,7 +570,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
