Remove unnecessary code and update payload in run.ipynb

--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -68,18 +68,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime\n",
-    "start_time = '2024-03-21 11:50:28,293070'\n",
-    "\n",
-    "datetime.datetime.strptime(start_time, \"%Y-%m-%d %H:%M:%S,%f%z\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -125,7 +113,7 @@
      "output_type": "stream",
      "text": [
       "Running boto3_sns workload: workflow-wo-dna_vis-ed-direct_sns\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'workflow-wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': 'f0870ea5-d94a-424c-894f-d8d618d991da', 'start_time': '2024-03-21 11:50:28,293070'}}\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'workflow-wo-dna_vis-ed-direct', 'experiment_type': 'boto3_direct', 'request_id': '6fe96778-7cd8-426d-bd72-4852ba4daa02', 'start_time': '2024-03-21 19:00:10,374521+0000'}}\n",
       "Times: 1\n",
       "Done\n",
       "\n"
@@ -154,7 +142,7 @@
      "output_type": "stream",
      "text": [
       "Running aws_step_function workload: wo-dna_vis-ed-step_function\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'workflow-wo-dna_vis-ed-direct_sns', 'experiment_type': 'boto3_sns', 'request_id': '54bb6a0e-1859-4e9e-89e5-5b19f4de4450', 'start_time': '2024-03-21 11:51:07,815391'}}\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'workflow-wo-dna_vis-ed-direct_sns', 'experiment_type': 'boto3_sns', 'request_id': '758c5963-12a6-4501-aa43-9b9fa96a282e', 'start_time': '2024-03-21 19:00:11,367321+0000'}}\n",
       "Times: 1\n"
      ]
     }
@@ -173,9 +161,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running multi_x workload: wo-dna_vis-ed-multi-x-0_0_1\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': '82ce7c27-d027-4fb3-8e50-683c37df7901', 'start_time': '2024-03-21 19:00:12,104073+0000'}}\n",
+      "Times: 1\n"
+     ]
+    }
+   ],
    "source": [
     "dna_vis_direct_calls_dir = \"./dna_visualization/external_database/multi_x\" # Boto3 only direct calls\n",
     "run_utility.run_experiment(dna_vis_direct_calls_dir, payload, times)"
