--- a/benchmarks/experiments/wrapper_overhead/run.ipynb
+++ b/benchmarks/experiments/wrapper_overhead/run.ipynb
@@ -161,16 +161,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running multi_x workload: wo-dna_vis-ed-multi-x-0_0_1\n",
-      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-step_function', 'experiment_type': 'aws_step_function', 'request_id': '82ce7c27-d027-4fb3-8e50-683c37df7901', 'start_time': '2024-03-21 19:00:12,104073+0000'}}\n",
-      "Times: 1\n"
+      "Running multi_x workload: wo-dna_vis-ed-multi_x-0.0.2\n",
+      "Payload: {'gen_file_name': 'small_sequence.gb', 'metadata': {'workload_name': 'wo-dna_vis-ed-multi_x-0.0.2', 'experiment_type': 'multi_x', 'request_id': '258e50ee-eb35-450e-a6ec-c9edbd0ce454', 'start_time': '2024-03-22 15:44:14,133436+0000'}}\n",
+      "Times: 1\n",
+      "Sending to home region: False, time_key: N/A\n",
+      "Done\n",
+      "\n"
      ]
     }
    ],
